# template_cmake_cpp

./: CMakeLists.txt  README.md  build.sh  reset.sh
doc/: vimrc
src/apps/: main.cpp
